--- a/src/sass/components/svg.module.scss
+++ b/src/sass/components/svg.module.scss
@@ -8,3 +8,10 @@
   height: 2.25rem;
   fill: var(--color-grey-dark-2);
 }
+.sideIcon {
+  width: 1.75rem;
+  height: 1.75rem;
+
+  margin-right: 2rem;
+  fill: currentColor; //Parent element
+}
