--- a/src/sass/layouts.scss
+++ b/src/sass/layouts.scss
@@ -20,14 +20,24 @@
 .sidebar {
   background-color: #fff;
   flex: 0 0 18%;
+  //Test
+  background-color: var(--color-grey-dark-1);
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 .hotel-view {
-  background-color: #fff;
+  //background-color: #fff;
   flex: 1;
+  //Test
+
+  height: 80rem;
 }
 ///////////////////////
 //Deeper than Layout
 ///////////////////////
+//Header
 .search {
   flex: 0 0 40%;
   display: flex;
@@ -85,4 +95,16 @@
       background-color: var(--color-grey-light-2);
     }
   }
+}
+//SideNav
+.side-nav {
+  font-size: 1.4rem;
+  list-style: none;
+  margin-top: 3.5rem;
+}
+.legal {
+  font-size: 1.2rem;
+  color: var(--color-grey-light-4);
+  text-align: center;
+  padding: 2.5rem;
 }
