--- a/src/sass/layouts.scss
+++ b/src/sass/layouts.scss
@@ -9,7 +9,7 @@
   font-size: 1.4rem;
   height: 7rem;
   background-color: #fff;
-  border-bottom: var(--color-grey-dark-1);
+  border-bottom: var(--grey-line);
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -30,9 +30,6 @@
 .hotel-view {
   //background-color: #fff;
   flex: 1;
-  //Test
-
-  height: 80rem;
 }
 ///////////////////////
 //Deeper than Layout
@@ -96,7 +93,7 @@
     }
   }
 }
-//SideNav
+//Content-SideNav
 .side-nav {
   font-size: 1.4rem;
   list-style: none;
@@ -107,4 +104,160 @@
   color: var(--color-grey-light-4);
   text-align: center;
   padding: 2.5rem;
+}
+//Content-Main
+.gallery {
+  display: flex;
+}
+.overview {
+  display: flex;
+  align-items: center;
+  border-bottom: var(--grey-line);
+  &__heading {
+    font-size: 2.25rem;
+    font-weight: 300;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    padding: 1.5rem 3rem;
+  }
+  &__stars {
+    margin-right: auto; //good trick with flex
+    display: flex; //trick to eliminate svg white space Can also use line height
+  }
+  &__location {
+    font-size: 1.2rem;
+    display: flex;
+    align-items: center;
+    .btn-inline {
+      border: none;
+      color: var(--color-primary);
+      font-size: inherit;
+      border-bottom: 0.5px solid currentColor;
+      padding-bottom: 2px;
+      background-color: transparent;
+      cursor: pointer;
+      transition: all 0.2s;
+      &:hover {
+        color: var(--color-grey-dark-1);
+      }
+      &:focus {
+        outline: none;
+        animation: pulsate 1s infinite;
+      }
+    }
+    &__icon-location {
+      margin-right: 0.5rem;
+    }
+  }
+  &__rating {
+    background-color: var(--color-primary);
+    color: white;
+    margin-left: 3rem;
+    padding: 0 2.25rem;
+    align-self: stretch;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    &-average {
+      font-size: 2.25rem;
+      font-weight: 300;
+      margin-bottom: -3px;
+    }
+    &-count {
+      font-size: 0.8rem;
+      text-transform: uppercase;
+    }
+  }
+}
+.detail {
+  display: flex;
+  padding: 4.5rem;
+  background-color: var(--color-grey-light-1);
+  border-bottom: var(--grey-line);
+}
+.description {
+  font-size: 14px;
+  flex: 0 0 60%;
+  background-color: #fff;
+  margin-right: 4.5rem;
+  padding: 3rem;
+  box-shadow: var(--shadow-light);
+}
+.user-review {
+  background-color: #fff;
+  flex: 1;
+}
+.paragragh:not(:last-of-type) {
+  margin-bottom: 2rem;
+}
+.list {
+  list-style: none;
+  margin: 3rem 0;
+  padding: 3rem 0;
+  border-top: var(--grey-line);
+  border-bottom: var(--grey-line);
+  display: flex;
+  flex-wrap: wrap;
+  &__item {
+    flex: 0 0 50%;
+    margin-bottom: 0.7rem;
+  }
+  &__item::before {
+    // svg in css
+    content: "";
+    display: inline-block; //this is important
+    /* background-image: url(../assets/img/chevron-thin-right.svg);
+    background-size: cover; */
+
+    height: 1rem;
+    width: 1rem;
+    margin-right: 0.7rem;
+
+    //Mask
+    background-color: var(--color-primary);
+    mask-image: url(../assets/img/chevron-thin-right.svg);
+    mask-size: cover;
+  }
+}
+.recommend {
+  font-size: 1.3rem;
+  color: var(--color-grey-dark-3);
+
+  display: flex;
+  align-items: center;
+
+  &__count {
+    margin-right: auto;
+  }
+  &__friends {
+  }
+
+  &__photo {
+    box-sizing: content-box;
+    height: 4rem;
+    width: 4rem;
+    border-radius: 50%;
+    border: 3px solid white;
+    &:not(:last-child) {
+      margin-right: -1.5rem;
+    }
+  }
+}
+
+//Keyframes
+@keyframes pulsate {
+  0% {
+    transform: scale(1);
+    box-shadow: none;
+  }
+  50% {
+    transform: scale(1.05);
+    box-shadow: 0 1rem 4rem rgba($color: #000000, $alpha: 0.25);
+  }
+  100% {
+    transform: scale(1);
+    box-shadow: none;
+  }
 }
